# OpenGL-Starter-Kit

./: CMakeLists.txt  README.md  util.h
shaders/: default.frag
src/: App.cpp  App.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Eyes.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Ghost.cpp  Ghost.h  LevelSpecs.h  Mode.h  Object.cpp  Object.h  Pixel.cpp  Pixel.h  PlayerObject.cpp  PlayerObject.h  PointsUtil.cpp  PointsUtil.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  Texture.cpp  Texture.h  main.cpp
tests/: CMakeLists.txt
util/: dots.txt  powerDots.txt  wallsOut.txt
