add_executable(lxpaint)
target_sources(lxpaint
    PRIVATE
        ./main.cpp
        ./App.cpp
        ./Canvas.cpp
        ./Object.cpp
        ./Renderer.cpp
        ./ResourceManager.cpp
        ./Shader.cpp
        ./Texture.cpp
)

target_link_libraries(lxpaint
    PRIVATE
        glad
        glm::glm
        glfw
        stb
)
